feat: create header html structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,51 @@
   <title>Test task</title>
 </head>
 <body>
-  
+  <header class="header">
+    <div class="header__wrapper wrapper">
+      <div class="header__info">
+        <div class="info__base">
+          <div class="logo header__logo">
+            <h1>ЛОГОТИП</h1>
+          </div>
+          <div class="number header__number">
+            8 800 777 50 50
+          </div>
+          <div class="search header__search">
+            <img src="" alt="search icon"> 
+            <input type="text" placeholder="Поиск товаров">
+          </div>
+        </div>
+        <div class="info__additional">
+          <div class="pay-link">
+            <a href="#">Доставка и оплата</a>
+          </div>
+        </div>  
+      </div>
+      <nav class="nav">
+        <ul class="nav__links">
+          <li class="nav__link">
+            <a href="">МОБИЛЬНЫЕ ТЕЛЕФОНЫ</a>
+          </li>
+          <li class="nav__link">
+            <a href="">ПЛАНШЕТЫ</a>
+          </li>
+          <li class="nav__link">
+            <a href="">ФОТОТЕХНИКА</a>
+          </li>
+          <li class="nav__link">
+            <a href="">НОУТБУКИ</a>
+          </li>
+          <li class="nav__link">
+            <a href="">ТЕЛЕВИЗОРЫ</a>
+          </li>
+        </ul>
+        <div class="trash">
+          <img src="" alt="">
+          <span class="trash__text">КОРЗИНА</span>
+        </div>
+      </nav>
+    </div>
+  </header>
 </body>
 </html>
