feat: create filters section html structure

--- a/index.html
+++ b/index.html
@@ -53,5 +53,33 @@
       </nav>
     </div>
   </header>
+  <main class="main">
+    <div class="main__wrapper">
+      <section class="filters">
+        <select class="filter" name="logotype" id="logotype">
+          <option class="filter__label" value="any">Любого логотипа</option>
+          <option class="filter__option" value="">Компакт-камера</option>
+          <option class="filter__option" value="">Беззеркальная</option>
+          <option class="filter__option" value="">Зеркальная</option>
+          <option class="filter__option" value="">Среднеформатная</option>
+        </select>
+        <select class="filter" name="brend" id="brend">
+          <option class="filter__label" value="any">Любого бренда</option>
+          <option class="filter__option" value="">Canon</option>
+          <option class="filter__option" value="">Nikon</option>
+          <option class="filter__option" value="">Sony</option>
+          <option class="filter__option" value="">Fujifilm</option>
+          <option class="filter__option" value="">Samsung</option>
+          <option class="filter__option" value="">Olympus</option>
+        </select>
+        <div class="filters__price">
+          <span class="price__text">ПО ЦЕНЕ</span>
+          <input class="price__input input" type="text">
+          <input class="price__input input" type="text">
+          <span class="price__text">РУБЛЕЙ</span>
+        </div>
+      </section>
+    </div>
+  </main>
 </body>
 </html>
