feat: create products section html structure

--- a/index.html
+++ b/index.html
@@ -79,6 +79,109 @@
           <span class="price__text">РУБЛЕЙ</span>
         </div>
       </section>
+      <section class="products">
+        <ul class="products__list">
+          <li class="product product_big">
+            <img src="" alt="" class="product__img">
+            <h2 class="product__title">Canon EOS 5D Mark III Body</h2>
+            <div class="product__text">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
+            <div class="product__price">
+              <span class="product__price-text">3 200,00 руб.</span>
+              <img src="" alt="" class="product__price-icon">
+            </div>
+          </li>
+          <li class="product">
+            <img src="" alt="" class="product__img">
+            <h2 class="product__title">Canon EOS 5D Mark III Body</h2>
+            <div class="product__text">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
+            <div class="product__price">
+              <span class="product__price-text">3 200,00 руб.</span>
+              <img src="" alt="" class="product__price-icon">
+            </div>
+          </li>
+          <li class="product">
+            <img src="" alt="" class="product__img">
+            <h2 class="product__title">Canon EOS 5D Mark III Body</h2>
+            <div class="product__text">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
+            <div class="product__price">
+              <span class="product__price-text">3 200,00 руб.</span>
+              <img src="" alt="" class="product__price-icon">
+            </div>
+          </li>
+          <li class="product">
+            <img src="" alt="" class="product__img">
+            <h2 class="product__title">Canon EOS 5D Mark III Body</h2>
+            <div class="product__text">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
+            <div class="product__price">
+              <span class="product__price-text">3 200,00 руб.</span>
+              <img src="" alt="" class="product__price-icon">
+            </div>
+          </li>
+          <li class="product">
+            <img src="" alt="" class="product__img">
+            <h2 class="product__title">Canon EOS 5D Mark III Body</h2>
+            <div class="product__text">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
+            <div class="product__price">
+              <span class="product__price-text">3 200,00 руб.</span>
+              <img src="" alt="" class="product__price-icon">
+            </div>
+          </li>
+          <li class="product">
+            <img src="" alt="" class="product__img">
+            <h2 class="product__title">Canon EOS 5D Mark III Body</h2>
+            <div class="product__text">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
+            <div class="product__price">
+              <span class="product__price-text">3 200,00 руб.</span>
+              <img src="" alt="" class="product__price-icon">
+            </div>
+          </li>
+          <li class="product">
+            <img src="" alt="" class="product__img">
+            <h2 class="product__title">Canon EOS 5D Mark III Body</h2>
+            <div class="product__text">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
+            <div class="product__price">
+              <span class="product__price-text">3 200,00 руб.</span>
+              <img src="" alt="" class="product__price-icon">
+            </div>
+          </li>
+          <li class="product">
+            <img src="" alt="" class="product__img">
+            <h2 class="product__title">Canon EOS 5D Mark III Body</h2>
+            <div class="product__text">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
+            <div class="product__price">
+              <span class="product__price-text">3 200,00 руб.</span>
+              <img src="" alt="" class="product__price-icon">
+            </div>
+          </li>
+          <li class="product">
+            <img src="" alt="" class="product__img">
+            <h2 class="product__title">Canon EOS 5D Mark III Body</h2>
+            <div class="product__text">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
+            <div class="product__price">
+              <span class="product__price-text">3 200,00 руб.</span>
+              <img src="" alt="" class="product__price-icon">
+            </div>
+          </li>
+          <li class="product">
+            <img src="" alt="" class="product__img">
+            <h2 class="product__title">Canon EOS 5D Mark III Body</h2>
+            <div class="product__text">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
+            <div class="product__price">
+              <span class="product__price-text">3 200,00 руб.</span>
+              <img src="" alt="" class="product__price-icon">
+            </div>
+          </li>
+          <li class="product">
+            <img src="" alt="" class="product__img">
+            <h2 class="product__title">Canon EOS 5D Mark III Body</h2>
+            <div class="product__text">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
+            <div class="product__price">
+              <span class="product__price-text">3 200,00 руб.</span>
+              <img src="" alt="" class="product__price-icon">
+            </div>
+          </li>
+        </ul>
+      </section>
     </div>
   </main>
 </body>
