feat: create styles for wrapper

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
   </header>
   <main class="main">
-    <div class="main__wrapper">
+    <div class="main__wrapper wrapper">
       <section class="filters">
         <select class="filter" name="logotype" id="logotype">
           <option class="filter__label" value="any">Любого логотипа</option>
