--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
           </div>
         </div>  
       </div>
-      <nav class="nav">
+    </div>
+    <nav class="nav">
+      <div class="nav__wrapper wrapper">
         <ul class="nav__links">
           <li class="nav__link">
             <a href="">МОБИЛЬНЫЕ ТЕЛЕФОНЫ</a>
@@ -50,9 +52,9 @@
           <img src="" alt="">
           <span class="trash__text">КОРЗИНА</span>
         </div>
-      </nav>
-    </div>
-  </header>
+      </div>
+    </nav>
+    </header>
   <main class="main">
     <div class="main__wrapper wrapper">
       <section class="filters">
