feat: create search component

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             8 800 777 50 50
           </div>
           <div class="search header__search">
-            <img src="" alt="search icon"> 
-            <input class="primary text_small regular" type="text" placeholder="Поиск товаров">
+            <img src="/assets/search-icon.svg" alt="search icon"> 
+            <input class="search__input primary text_small regular" type="text" placeholder="Поиск товаров">
           </div>
         </div>
         <div class="info__additional">
