feat: create price input component

--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@
         </div>
         <div class="filters__price">
           <span class="price__text filter-color text_small">ПО ЦЕНЕ</span>
-          <input class="price__input input text_small" type="text">
-          <input class="price__input input text_small" type="text">
+          <div class="price__inputs-container">
+            <input class="price__input text_small filter-color" type="text" placeholder="500 000">
+            <input class="price__input text_small filter-color" type="text" placeholder="25 000">
+          </div>
           <span class="price__text filter-color text_small">РУБЛЕЙ</span>
         </div>
       </section>
