feat: stylezed product component

--- a/index.html
+++ b/index.html
@@ -129,21 +129,25 @@
       <section class="products">
         <ul class="products__list">
           <li class="product product_big">
-            <img src="" alt="" class="product__img">
-            <h2 class="text secondary">Canon EOS 5D Mark III Body</h2>
-            <div class="product__text description text_small">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
-            <div class="product__price sale-color">
-              <span class="product__price-text text sale-color">3 200,00 руб.</span>
-              <img src="" alt="" class="product__price-icon">
+            <img src="/assets/big_product-image.png" alt="product photo" class="product__img">
+            <div class="product__info">
+              <div class="info__title">
+                <h2 class="text secondary">Canon EOS 5D Mark III Body</h2>
+                <div class="product__text description text_small">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей профессиональных фотографов и видеооператоров. Преемник успешной модели EOS 5D Mark II. Фотоаппарат имеет 22.3 Мп. CMOS-сенсор размером 36х24 мм, 14-битный процессор DIGIC 5+, 61-точечный автофокус.</div>  
+              </div>
+              <div class="product__price sale-color">
+                <span class="product__price-text text sale-color">3 200,00 руб.</span>
+                <img src="" alt="" class="product__price-icon">
+              </div>
             </div>
           </li>
           <li class="product">
-            <img src="" alt="" class="product__img">
+            <img src="/assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
               <span class="product__price-text price-color text">3 200,00 руб.</span>
-              <img src="" alt="" class="product__price-icon">
+              <img src="assets/trash-icon.svg" alt="cart-icon" class="product__price-icon">
             </div>
           </li>
           <li class="product">
