feat: create products list style

--- a/index.html
+++ b/index.html
@@ -151,84 +151,84 @@
             </div>
           </li>
           <li class="product">
-            <img src="" alt="" class="product__img">
+            <img src="/assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
               <span class="product__price-text price-color text">3 200,00 руб.</span>
-              <img src="" alt="" class="product__price-icon">
+              <img src="assets/trash-icon.svg" alt="cart-icon" class="product__price-icon">
             </div>
           </li>
           <li class="product">
-            <img src="" alt="" class="product__img">
+            <img src="/assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
               <span class="product__price-text price-color text">3 200,00 руб.</span>
-              <img src="" alt="" class="product__price-icon">
+              <img src="assets/trash-icon.svg" alt="cart-icon" class="product__price-icon">
             </div>
           </li>
           <li class="product">
-            <img src="" alt="" class="product__img">
+            <img src="/assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
               <span class="product__price-text price-color text">3 200,00 руб.</span>
-              <img src="" alt="" class="product__price-icon">
+              <img src="assets/trash-icon.svg" alt="cart-icon" class="product__price-icon">
             </div>
           </li>
           <li class="product">
-            <img src="" alt="" class="product__img">
+            <img src="/assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
               <span class="product__price-text price-color text">3 200,00 руб.</span>
-              <img src="" alt="" class="product__price-icon">
+              <img src="assets/trash-icon.svg" alt="cart-icon" class="product__price-icon">
             </div>
           </li>
           <li class="product">
-            <img src="" alt="" class="product__img">
+            <img src="/assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
               <span class="product__price-text price-color text">3 200,00 руб.</span>
-              <img src="" alt="" class="product__price-icon">
+              <img src="assets/trash-icon.svg" alt="cart-icon" class="product__price-icon">
             </div>
           </li>
           <li class="product">
-            <img src="" alt="" class="product__img">
+            <img src="/assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
               <span class="product__price-text price-color text">3 200,00 руб.</span>
-              <img src="" alt="" class="product__price-icon">
+              <img src="assets/trash-icon.svg" alt="cart-icon" class="product__price-icon">
             </div>
           </li>
           <li class="product">
-            <img src="" alt="" class="product__img">
+            <img src="/assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
               <span class="product__price-text price-color text">3 200,00 руб.</span>
-              <img src="" alt="" class="product__price-icon">
+              <img src="assets/trash-icon.svg" alt="cart-icon" class="product__price-icon">
             </div>
           </li>
           <li class="product">
-            <img src="" alt="" class="product__img">
+            <img src="/assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
               <span class="product__price-text price-color text">3 200,00 руб.</span>
-              <img src="" alt="" class="product__price-icon">
+              <img src="assets/trash-icon.svg" alt="cart-icon" class="product__price-icon">
             </div>
           </li>
           <li class="product">
-            <img src="" alt="" class="product__img">
+            <img src="/assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
               <span class="product__price-text price-color text">3 200,00 руб.</span>
-              <img src="" alt="" class="product__price-icon">
+              <img src="assets/trash-icon.svg" alt="cart-icon" class="product__price-icon">
             </div>
           </li>
         </ul>
